Fix horizontal scrolling on superhero.html

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,6 @@ h1 {
   table {
     border-spacing: 0px;
     width: 100%;
-    max-width: 100%;
     margin-bottom: 1rem;
     background-color: transparent;
   }
@@ -65,50 +64,12 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
   }
 
   a:hover {
     background-color: red;
   }
 
-  @keyframes animation {
-    0% {
-      background-color: red;
-      left: 0px;
-      top: 0px;
-    }
-    25% {
-      background-color: yellow;
-      left: 300px;
-      top: 0px;
-    }
-    50% {
-      background-color: blue;
-      left: 300px;
-      top: 800px;
-    }
-    75% {
-      background-color: green;
-      left: -300px;
-      top: 800px;
-    }
-    90% {
-      background-color: red;
-      left: -300px;
-      top: 0px;
-    }
-    100% {
-        background-color: blueviolet;
-        left: 0px;
-        top: 0px;
-    }
-  }
-
   .superhero {
-    animation-name: animation;
-    animation-iteration-count: 2;
-    animation-duration: 3s;
-    animation-direction: alternate;
-    position: relative;
+    text-align: center;
   }
